feat: Enhance delete functionality for actors, directors, and categories; streamline response DTOs and repository methods